Saving and writing string options now simplified
Until now, for each string option (for example `--hdu'), I would check
and allocate the space, individually. Also when printing, I had to
check individually to see if it has a space character or not! So I
wrote a simple function in checkset.c and a macro in checkset.h to do
the job and now for all the options in all the programs, we can simply
call those functions. This significantly increases the readability and
decreases the potential for bugs in the code.

Until now there was only a small number of cases in each each program,
so it wasn't bothering me. But while making MakeProfiles (which has
lots of such functions), I noticed how stupidly repetative the checks
are! So I wrote this function and the macro. When I saw how convenient
they are, I applied them to all the programs, to enhance them too.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-06-13  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/ : All the functions to make a copy of an input and print
+	string values were changed. These were mainly in ui.c and args.h
+	for each program.  Until now, for each option, I would allocate,
+	check and set the proper values, but now, I wrote a small function
+	in checkset.c (allocatecopyset) which does the job. This makes
+	reading the code significantly more easy and less bugy.
+
 2015-06-12  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* src/subtractsky/args.h (options): Removed the
