MakeCatalog now reads the inputs
MakeCatalog's ui.c is complete for now (all the inputs are read). In
order to make things clear and elegant, I made a clear function to
check for data in other extensions of an image or in another file
depending on the user input.

Until now, there was a macro in checkset.h and also a function in
fitsarrayvv.c which done the job almost similarly. The mask checking
functions of all the programs were updated.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2015-06-13  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
+	* lib/fitsarrayvv.c (fileorextname): New name for the setmaskname
+	function. This was done to be a generic check, for all kinds of
+	input, not just the mask.
+
 	* src/ : All the functions to make a copy of an input and print
 	string values were changed. These were mainly in ui.c and args.h
 	for each program.  Until now, for each option, I would allocate,
